MOD-186 Added Git Model and Git Entity
